Refactor project-3: Remove unused HTML files and update dependencies

--- a/project-3/www/html/index.html
+++ b/project-3/www/html/index.html
@@ -15,20 +15,15 @@
             <br>
             <a href="html/HowToConnect4.html">How to Play Connect 4</a>
             <a href="html/Connect4Computer.html">Play Connect 4 With Computer</a>
-            <a href="html/Connect4Human.html">Play Connect 4 With Another Human</a>
             <br>
             <a href="html/HowToTootOtto.html">How to Play Toot-Otto</a>
             <a href="html/TootOttoComputer.html">Play Toot-Otto With Computer</a>
-            <a href="html/TootOttoHuman.html">Play Toot-Otto With Another Human</a>
-            <br>
-            <a href="html/ScoreBoard.html">View Game History</a>
-            <a href="html/Scores.html">Score Board</a>
         </div>
         <div id="main-content">
           <div class="w3-container" id="services" style="margin-top:75px">
             <h5 class="w3-xxxlarge w3-text-red"><b>Welcome</b></h5>
             <hr style="width:50px;border:5px solid red" class="w3-round">
-            <p>This application contains the following two board games, both in human Vs. human and human Vs. Computer versions.
+            <p>This application contains the following two board games human Vs. Computer.
             </p>
             <ul>
             <li>Connect 4</li>
