--- a/project-3/www/html/index.html
+++ b/project-3/www/html/index.html
@@ -20,7 +20,7 @@
             <a href="html/TootOttoComputer.html">Play Toot-Otto With Computer</a>
         </div>
         <div id="main-content">
-          <div class="w3-container" id="services" style="margin-top:75px">
+          <div style="margin-top:75px">
             <h5 class="w3-xxxlarge w3-text-red"><b>Welcome</b></h5>
             <hr style="width:50px;border:5px solid red" class="w3-round">
             <p>This application contains the following two board games human Vs. Computer.
