Fix formatting issues in project-3 code files

--- a/project-3/www/html/Connect4Computer.html
+++ b/project-3/www/html/Connect4Computer.html
@@ -54,6 +54,7 @@
             </div>
         </div>
     </div>
-    <script type="module" src="../js/Connect4Computer.js"></script>
+    <script src="../js/Connect4Computer.js"></script>
+    <script src="../bootstrap.js"></script>
 </body>
 </html>
